# component-opt

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
src/: component.rs  lib.rs  main.rs  module.rs
tests/: README.md  runtime.rs
